--- a/Datensammlung Adliswil.ipynb
+++ b/Datensammlung Adliswil.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bf63c078",
    "metadata": {
     "scrolled": true
@@ -393,7 +393,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 199/199 [00:03<00:00, 49.96it/s]\n"
+      "100%|█████████████████████████████████████████| 199/199 [00:04<00:00, 48.23it/s]\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "317102dc",
    "metadata": {},
    "outputs": [
@@ -2673,7 +2673,7 @@
        "197                                                                                                                                                      [ Acar Sait,  Marty Fässler Carmen, , Peter Bühler (keine Funktion)\\n Davide Loss (keine Funktion), ]  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2684,7 +2684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "47b435d2",
    "metadata": {},
    "outputs": [],
@@ -2713,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a5d8b29e",
    "metadata": {
     "scrolled": true
@@ -2725,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6290e6bf",
    "metadata": {
     "scrolled": true
@@ -2734,7 +2734,6 @@
     {
      "data": {
       "text/plain": [
-       "Namen-neu\n",
        "Senn Mario                 30\n",
        "Davide Loss                21\n",
        "Liedtke Wolfgang           20\n",
@@ -2794,10 +2793,10 @@
        "Künzler Urs                 1\n",
        "Jacomet Renato              1\n",
        "Christoph Schwager          1\n",
-       "Name: count, dtype: int64"
+       "Name: Namen-neu, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2808,7 +2807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "508003d9",
    "metadata": {},
    "outputs": [
@@ -5430,7 +5429,7 @@
        "61                                                                                      [Corrodi Bernie, Muthuthamby Kannathasan, Welti Pascal]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5443,7 +5442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5f21fcd7",
    "metadata": {},
    "outputs": [],
