--- a/Datensammlung Adliswil.ipynb
+++ b/Datensammlung Adliswil.ipynb
@@ -2728,7 +2728,7 @@
    "execution_count": 10,
    "id": "6290e6bf",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
