Update 2. Auswertung Adliswil.ipynb

--- a/2. Auswertung Adliswil.ipynb
+++ b/2. Auswertung Adliswil.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ea2ddf",
+   "id": "a8049446",
    "metadata": {},
    "source": [
-    "# 1. Vorbereitung"
+    "# Vorbereitung"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab1e3270",
+   "id": "15630be0",
    "metadata": {},
    "source": [
     "Zuerst importiere ich die nötigen Libraries."
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ba7c14",
+   "id": "83aaab56",
    "metadata": {},
    "source": [
     "Ich setze die Option, dass ich später in den Dataframes alle Angaben sehe."
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc04a7d3",
+   "id": "fae49259",
    "metadata": {},
    "source": [
     "Danach importiere ich die beiden Listen, die ich brauche. Jene mit den Vorstössen und jene mit den Namen und Parteien der Politiker/innen."
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69376744",
+   "id": "4064dadf",
    "metadata": {},
    "source": [
     "Damit ich die beiden Listen später mergen kann, muss ich aus den Listen in der Spalte Namen-neu des Vorstoss-Dataframes die einzelnen Elemente herausziehen. Ich will also eine separate Zeile für jede Person, die an einem Vorstoss beteilitgt war. Dazu mache ich eine Kopie des Dataframes, um nichts zu überschreiben. Danach zerteile ich mit der lambda-Funktion die Liste in einzelne Elemente. Und zwar immer dann, wenn ein Komma kommt. Mit der Funktion .explode teile ich die definierten Namen in der Liste schliesslich in einzelne Zeilen auf."
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c7dd823c",
+   "id": "bbc1ad75",
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "820a0126",
+   "id": "504af17c",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b256db1b",
+   "id": "bd001e3c",
    "metadata": {},
    "source": [
     "Nun habe ich für alle Personen, die an einem Vorstoss beteiligt waren, eine einzelne Zeile. Um sie mit der Namensliste mergen zu können, müssen die Namen identisch sein. Ich muss also noch sämtliche Klammern und Anführungszeichen eliminieren. Das mache ich mit Hilfe von Regex."
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ee57304b",
+   "id": "b43323fd",
    "metadata": {
     "scrolled": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088093c6",
+   "id": "75704e04",
    "metadata": {},
    "source": [
     "Als nächstes will ich die beiden Listen so zusammenfügen, dass ich mit den IDs der Politiker und der Vorstösse arbeiten kann. So kann ich verhindern, dass sich Fehler einschleichen, falls zwei Politiker/innen gleich heissen. Ich merge die beiden Listen zur df_ID"
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "570e1f84",
+   "id": "a42d6639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "1a6674cb",
+   "execution_count": 22,
+   "id": "2194cc76",
    "metadata": {
     "scrolled": true
    },
@@ -504,6 +504,31 @@
        "      <td>2</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>105.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -514,21 +539,26 @@
        "1            2          62.0\n",
        "2            2          86.0\n",
        "3            2          96.0\n",
-       "4            2           6.0"
+       "4            2           6.0\n",
+       "5            2          66.0\n",
+       "6            2         105.0\n",
+       "7            3          20.0\n",
+       "8            4          71.0\n",
+       "9            4           1.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ID.head(5)"
+    "df_ID.head(10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32019f31",
+   "id": "3445dfed",
    "metadata": {},
    "source": [
     "Jetzt habe ich die Grundlage geschaffen, um mit den konkreten Auswertungen beginnen zu konnen."
@@ -536,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5ed125c",
+   "id": "d8a35b94",
    "metadata": {},
    "source": [
     "## 1. Welche Parteien reichen die häufigsten Vorstösse ein?"
@@ -545,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21397ab2",
+   "id": "4911ac0f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -553,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc1df55c",
+   "id": "ba071529",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -561,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9fd218c",
+   "id": "eea24009",
    "metadata": {},
    "outputs": [],
    "source": []
