--- a/1. Datensammlung und Bereinigung Adliswil.ipynb
+++ b/1. Datensammlung und Bereinigung Adliswil.ipynb
@@ -107,7 +107,7 @@
     "        #Den Namen der Elemente suche ich über das Entwicklertool\n",
     "        elements = driver.find_elements(By.XPATH,'//td[@class=\"icms-datatable-col-title\"]/a')\n",
     "        \n",
-    "    #Es gibt auf der Seite noch ein Weiteres Element mit dem gesuchten Namen. Das soll er ignorieren, \n",
+    "    #Es gibt auf der Seite noch ein Weiteres Element mit dem gesuchten Namen. Das will ich ignorieren, \n",
     "    #deshalb die Try-Funktion.\n",
     "        try:\n",
     "            elements[link_number].click()\n",
@@ -126,7 +126,7 @@
     "        #Es dauert auch hier etwas\n",
     "        time.sleep(3)\n",
     "\n",
-    "    #Dann soll das Programm zu nächsten Seite gehen. und in der Schlaufe oben wieder beginnen. Die Webseite\n",
+    "    #Dann soll das Programm zur nächsten Seite gehen und in der Schlaufe oben wieder beginnen. Die Webseite\n",
     "    #weist die aktuelle Seitenzahl leider nicht in der URL aus. Ich muss die Seite also mit einem Selenium-Befehl\n",
     "    #wechseln...\n",
     "    driver.find_element(By.ID, 'icmsTable-geschaefteList_next').click()\n",
@@ -171,7 +171,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "bb493f3a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -404,7 +406,7 @@
    "id": "f98fb6c9",
    "metadata": {},
    "source": [
-    "Sieht korrekt aus. Nun werde ich mit Beautifulsoup die einzelnen htm-Dateien auslesen und das Ergebnis als Dataframe speichern."
+    "Nun werde ich mit Beautifulsoup die einzelnen htm-Dateien auslesen und das Ergebnis als Dataframe speichern."
    ]
   },
   {
@@ -424,13 +426,14 @@
     }
    ],
    "source": [
-    "#Bei den Daten von Wädenswil gab es ein Verstecktes Element namens .DS_Store. Das führt zu Problemen, weil es\n",
-    "#das Format nicht lesen kann. Ich mache auch hier zur Sicherheit einen Befehl, dass er eine solche Datei ignoriert.\n",
-    "#Als erstes erstelle ich einen Platzhalter für meinen Datensatz\n",
+    "#Als erstes erstelle ich einen Platzhalter für meinen Datensatz.\n",
     "datensatz_adliswil = []\n",
+    "#Bei den Files gab es ein Verstecktes Element namens .DS_Store. Das führt zu Problemen, weil es\n",
+    "#das Format nicht lesen kann. Ich mache hier zur Sicherheit einen Befehl, dass er diese\n",
+    "#Datei ignoriert. \n",
     "for elem in tqdm(lst):\n",
     "    if not elem.startswith('.DS_Store'):\n",
-    "        ##Nun öffne ich eine Daten nach der anderen und lese sie ein.\n",
+    "        #Nun öffne ich eine Datei nach der anderen und lese sie ein.\n",
     "        with open(os.path.join('subpages_adliswil', elem), 'r') as file:\n",
     "            text = file.read()\n",
     "        #Ich lasse das Ganze mit BeautifulSoup lesen.\n",
@@ -453,7 +456,6 @@
     "        except:\n",
     "            datum=None\n",
     "        try:\n",
-    "            #namen = soup.find(class_='icms-desclist-container').find('dt', string='Verfasser/Beteiligte').find_next_sibling('dd').text.strip()\n",
     "            namen = soup.find(class_='icms-desclist-container').find('dt', string='Verfasser/Beteiligte').find_next_sibling('dd').findChildren()\n",
     "            namen = [name.get_text(separator=\"\\n\") for name in namen]\n",
     "        except:\n",
@@ -590,7 +592,7 @@
    "id": "8fc0b3b9",
    "metadata": {},
    "source": [
-    "Die Spalte \"Namen\" birgt mehrere Probleme. Ich definiere eine Funktion, um diese Spalte zu bereinigen. Es sollen sämtliche Zusätze wie (Erstunterzeichner), Klammern und Umbrüche aber auch unnötige Abstände."
+    "Die Spalte \"Namen\" birgt mehrere Probleme. Ich definiere eine Funktion, um diese Spalte zu bereinigen. Es sollen sämtliche Zusätze wie (Erstunterzeichner), Klammern und Umbrüche aber auch unnötige Abstände verschwinden."
    ]
   },
   {
