--- a/1. Datensammlung und Bereinigung Waedenswil.ipynb
+++ b/1. Datensammlung und Bereinigung Waedenswil.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ea6fbe3",
+   "metadata": {},
+   "source": [
+    "Ich importiere die nötigen Libraries..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2e6de77e",
@@ -30,6 +38,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c816d3c",
+   "metadata": {},
+   "source": [
+    "... und setze die Option, dass ich später alle Zeilen eines Dataframes sehe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "3c7a765d",
@@ -38,6 +54,14 @@
    "source": [
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_colwidth', None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ab68b42",
+   "metadata": {},
+   "source": [
+    "Danach scrappe ich die Seiten der Stadt Wädenswil, um alle Subpages mit den Informationen über die einzelnen Vorstösse zu erhalten."
    ]
   },
   {
@@ -84,7 +108,7 @@
     "        #Den Namen der Elemente suche ich über das Entwicklertool\n",
     "        elements = driver.find_elements(By.XPATH,'//td[@class=\"icms-datatable-col-title\"]/a')\n",
     "        \n",
-    "    #Es gibt auf der Seite noch ein Weiteres Element mit dem gesuchten Namen. Das soll er ignorieren, \n",
+    "    #Es gibt auf der Seite noch ein Weiteres Element mit dem gesuchten Namen. Das ignoriere ich, \n",
     "    #deshalb die Try-Funktion.\n",
     "        try:\n",
     "            elements[link_number].click()\n",
@@ -103,9 +127,9 @@
     "        #Es dauert auch hier etwas\n",
     "        time.sleep(3)\n",
     "\n",
-    "    #Dann soll das Programm zu nächsten Seite gehen. und in der Schlaufe oben wieder beginnen. Die Webseite\n",
-    "    #weist die aktuelle Seitenzahl leider nicht in der URL aus. Ich muss die Seite also mit einem Selenium-Befehl\n",
-    "    #wechseln...\n",
+    "    #Dann soll das Programm zu nächsten Seite gehen und in der Schlaufe oben wieder beginnen. Die Webseite\n",
+    "    #weist die aktuelle Seitenzahl leider nicht in der URL aus. Ich muss die Seite also mit einem \n",
+    "    #Selenium-Befehl wechseln...\n",
     "    driver.find_element(By.ID, 'icmsTable-geschaefteList_next').click()\n",
     "    time.sleep(4)\n",
     "\n",
@@ -702,10 +726,10 @@
     "#Als erstes erstelle ich einen Platzhalter für meinen Datensatz\n",
     "datensatz_waedenswil = []\n",
     "#Es gibt ein verstecktes Element namens .DS_Store. Später wird es eine Fehlermeldung geben, weil er dessen\n",
-    "#Format nicht lesen kann. Ich mache sage also, dass er dieses File ignorieren soll.\n",
+    "#Format nicht lesen kann. Ich sage also, dass er dieses File ignorieren soll.\n",
     "for elem in tqdm(lst):\n",
     "    if not elem.startswith('.DS_Store'):\n",
-    "        #Nun öffne ich eine Daten nach der anderen und lese sie ein.\n",
+    "        #Nun öffne ich eine Datei nach der anderen und lese sie ein.\n",
     "        with open(os.path.join('subpages_waedenswil', elem), 'r') as file:\n",
     "            text = file.read()\n",
     "            #Ich lasse das Ganze mit BeautifulSoup lesen.\n",
@@ -860,14 +884,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "847cae5e",
+   "metadata": {},
+   "source": [
+    "Die Spalte \"Namen\" birgt mehrere Probleme. Ich definiere eine Funktion, um diese Spalte zu bereinigen. Es sollen sämtliche Zusätze wie (Erstunterzeichner), Klammern und Umbrüche aber auch unnötige Abstände verschwinden."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "31f34f0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ich muss die Namensliste bereinigen. Dafür schreibe ich eine Funktion. In einigen Elementen trennt es die \n",
-    "#Namen gar nicht, bei anderen Elementen hängtes Zusätze wie \"Mitunterzeichner/in\" oder eine Partei an.\n",
     "def namenliste_reinigen(liste):\n",
     "    \n",
     "    if liste is None:\n",
@@ -889,6 +919,14 @@
     "                    neueliste.append(cleaned_element)\n",
     "    \n",
     "    return neueliste"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fed8db3",
+   "metadata": {},
+   "source": [
+    "Nun wende ich die definierte funktion an. Zudem entferne ich drei Elemente, die keinem Politiker oder Politikerin zugeordnet werden könnnen. Dabei handelt es um Vorstösse von der Geschäftskommission und nicht von Parteien. Deshalb lösche ich sie raus."
    ]
   },
   {
@@ -1030,6 +1068,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f2b3005c",
+   "metadata": {},
+   "source": [
+    "Jetzt setze ich noch das richtige Zeitformat, um später Auswertungen machen zu können..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "bd26de48",
@@ -1043,8 +1089,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0754a9a",
+   "metadata": {},
+   "source": [
+    "...und gebe den einzelnen Vorstössen eine ID-Nummer. Das vereinfacht später die Auswertung."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "62431f54",
    "metadata": {},
    "outputs": [
@@ -1109,26 +1163,6 @@
        "      <td>[Baer Charlotte, Jürg Wuhrmann, Ivano Coduri, Erich Schärer, Marcel Bättig, Christoph Lehmann, Adrian Stocker, Pascal Rubin, Christina Zurfluh Fraefel, Hanspeter Andreoli, Sandy Bossert]</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Postulat betreffend Unterstützung zur Senkung von Mietzinsen bei Sozialhilfebeziehenden</td>\n",
-       "      <td>Postulat</td>\n",
-       "      <td>Abgeschrieben</td>\n",
-       "      <td>20. Juni 2017</td>\n",
-       "      <td>[ Reiter Ulrich, , Rita Hug (Erstunterzeichner/in)\\n Claudia Bühlmann (Mitunterzeichner/in), ]</td>\n",
-       "      <td>[Reiter Ulrich, Rita Hug, Claudia Bühlmann]</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Interpellation betreffend die nachhaltige Wasserversorgung in Wädenswil</td>\n",
-       "      <td>Interpellation</td>\n",
-       "      <td>Beantwortet</td>\n",
-       "      <td>15. Juli 2012</td>\n",
-       "      <td>[Albert A. Stahel (Verfasser/in)]</td>\n",
-       "      <td>[Albert A. Stahel]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1138,46 +1172,44 @@
        "0                                               Interpellation betreffend Ausbau Bahnhof Wädenswil   \n",
        "1  Postulat betreffend Berücksichtigung der IAO-Kernübereinkommen im städtischen Beschaffungswesen   \n",
        "2                                Interpellation betreffend Konzept für den Erhalt der Bienenvölker   \n",
-       "3          Postulat betreffend Unterstützung zur Senkung von Mietzinsen bei Sozialhilfebeziehenden   \n",
-       "4                          Interpellation betreffend die nachhaltige Wasserversorgung in Wädenswil   \n",
        "\n",
-       "    Geschaeftsart         Status              Datum  \\\n",
-       "0  Interpellation       Erledigt      2. April 2018   \n",
-       "1        Postulat    Beantwortet      19. Juni 2008   \n",
-       "2  Interpellation       Erledigt  17. Dezember 2012   \n",
-       "3        Postulat  Abgeschrieben      20. Juni 2017   \n",
-       "4  Interpellation    Beantwortet      15. Juli 2012   \n",
+       "    Geschaeftsart       Status              Datum  \\\n",
+       "0  Interpellation     Erledigt      2. April 2018   \n",
+       "1        Postulat  Beantwortet      19. Juni 2008   \n",
+       "2  Interpellation     Erledigt  17. Dezember 2012   \n",
        "\n",
        "                                                                                                                                                                                                                                                                                                                                                                                                Namen  \\\n",
        "0                                                                                                                                                                                                                                                                                                      [ Reiter Ulrich, , Rita Hug (Erstunterzeichner/in)\\n Claudia Bühlmann (Mitunterzeichner/in), ]   \n",
        "1                                                                                                                                                                                                                                                                                                                                                                                       [Willy Rüegg]   \n",
        "2  [ Baer Charlotte, , Jürg Wuhrmann (keine Funktion)\\n Ivano Coduri (keine Funktion)\\n Erich Schärer (keine Funktion)\\n Marcel Bättig (keine Funktion)\\n Christoph Lehmann (keine Funktion)\\n Adrian Stocker (keine Funktion)\\n Pascal Rubin (keine Funktion)\\n Christina Zurfluh Fraefel (keine Funktion)\\n Hanspeter Andreoli (keine Funktion)\\n Sandy Bossert (keine Funktion), , , , , , , , , ]   \n",
-       "3                                                                                                                                                                                                                                                                                                      [ Reiter Ulrich, , Rita Hug (Erstunterzeichner/in)\\n Claudia Bühlmann (Mitunterzeichner/in), ]   \n",
-       "4                                                                                                                                                                                                                                                                                                                                                                   [Albert A. Stahel (Verfasser/in)]   \n",
        "\n",
        "                                                                                                                                                                                    Namen-neu  \\\n",
        "0                                                                                                                                                 [Reiter Ulrich, Rita Hug, Claudia Bühlmann]   \n",
        "1                                                                                                                                                                               [Willy Rüegg]   \n",
        "2  [Baer Charlotte, Jürg Wuhrmann, Ivano Coduri, Erich Schärer, Marcel Bättig, Christoph Lehmann, Adrian Stocker, Pascal Rubin, Christina Zurfluh Fraefel, Hanspeter Andreoli, Sandy Bossert]   \n",
-       "3                                                                                                                                                 [Reiter Ulrich, Rita Hug, Claudia Bühlmann]   \n",
-       "4                                                                                                                                                                          [Albert A. Stahel]   \n",
        "\n",
        "   ID-Vorstoss  \n",
        "0            1  \n",
        "1            2  \n",
-       "2            3  \n",
-       "3            4  \n",
-       "4            5  "
+       "2            3  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_filtered['ID-Vorstoss'] = df_filtered.reset_index().index + 1\n",
-    "df_filtered.head(5)"
+    "df_filtered.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b22127",
+   "metadata": {},
+   "source": [
+    "Zu guter Letzt speichere ich die gesammelten und bereinigten Daten als CSV-File ab."
    ]
   },
   {
@@ -1189,14 +1221,6 @@
    "source": [
     "df_filtered.to_csv('All_Datas/daten_Wädenswil.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d44e848",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
