--- a/2. Auswertung Adliswil.ipynb
+++ b/2. Auswertung Adliswil.ipynb
@@ -1851,13 +1851,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "id": "ede79289",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Partei</th>\n",
+       "      <th>Erfolgreich</th>\n",
+       "      <th>Nicht Erfolgreich</th>\n",
+       "      <th>Erfolgsrate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SP</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11.764706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GLP</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Grüne</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>36.363636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Die Mitte</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FDP</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78.947368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FW</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>84.615385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EVP</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SVP</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Partei  Erfolgreich  Nicht Erfolgreich  Erfolgsrate\n",
+       "6         SP            2                 15    11.764706\n",
+       "4        GLP            1                  2    33.333333\n",
+       "5      Grüne            4                  7    36.363636\n",
+       "0  Die Mitte            4                  6    40.000000\n",
+       "2        FDP           15                  4    78.947368\n",
+       "3         FW           11                  2    84.615385\n",
+       "1        EVP            9                  1    90.000000\n",
+       "7        SVP           12                  0   100.000000"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_parteien_erfolg['Erfolgsrate'] = (df_parteien_erfolg['Erfolgreich'] / (df_parteien_erfolg['Erfolgreich'] + df_parteien_erfolg['Nicht Erfolgreich'])) * 100\n",
-    "df_parteien_erfolg = df_parteien_erfolg.sort_values(by='Erfolgsrate', ascending=True)"
+    "df_parteien_erfolg = df_parteien_erfolg.sort_values(by='Erfolgsrate', ascending=True)\n",
+    "df_parteien_erfolg"
    ]
   },
   {
