--- a/2. Auswertung Adliswil.ipynb
+++ b/2. Auswertung Adliswil.ipynb
@@ -62,35 +62,90 @@
    "id": "a19f1c92",
    "metadata": {},
    "source": [
-    "Danach importiere ich die beiden Hauptfiles. Jenes mit den Vorstössen und jenes mit den Namen und Parteien der Politiker/innen."
+    "Danach importiere ich die beiden Hauptfiles. Jenes mit den Vorstössen und jenes mit den Namen und Parteien der Politiker/innen. Die Daten für die Namen und der Parteien habe ich von der Stadt erhalten."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "416bea0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Partei</th>\n",
+       "      <th>ID-Politiker</th>\n",
+       "      <th>Geschlecht</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Acar Sait</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>1</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aebli Daniel</td>\n",
+       "      <td>SVP</td>\n",
+       "      <td>2</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Andrea Blümli</td>\n",
+       "      <td>Die Mitte</td>\n",
+       "      <td>3</td>\n",
+       "      <td>w</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name     Partei  ID-Politiker Geschlecht\n",
+       "0      Acar Sait         SP             1          m\n",
+       "1   Aebli Daniel        SVP             2          m\n",
+       "2  Andrea Blümli  Die Mitte             3          w"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "path2 = \"All_Datas/Parlamentarier_Adliswil.csv\"\n",
-    "df_parlamentarier = pd.read_csv(path2)"
+    "df_parlamentarier = pd.read_csv(path2)\n",
+    "df_parlamentarier.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "0edfd1ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"All_Datas/daten_adliswil.csv\"\n",
-    "df = pd.read_csv(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "cd19e30b",
    "metadata": {},
    "outputs": [
     {
@@ -185,12 +240,14 @@
        "2            3  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "path = \"All_Datas/daten_adliswil.csv\"\n",
+    "df = pd.read_csv(path)\n",
     "df.head(3)"
    ]
   },
@@ -1016,7 +1073,7 @@
    "id": "ee6348ee",
    "metadata": {},
    "source": [
-    "Und plotte das ganze ebenfalls als Säulendiagramm mit den Parteifarben."
+    "Und plotte das ganze ebenfalls als Balkendiagramm mit den Parteifarben."
    ]
   },
   {
@@ -1075,10 +1132,10 @@
     }
    ],
    "source": [
-    "# Zuerst definiere ich die art der Grafik und die erste Achse - und sage, dass es noch eine zweite gibt.\n",
+    "# Zuerst definiere ich die Art der Grafik und die erste Achse - und sage, dass es noch eine zweite gibt.\n",
     "fig, ax1 = plt.subplots()\n",
     "\n",
-    "# Hier definiere ich die Achse mit den durchschnittlichen Sitzen - es soll eine Linie mit Markern sein\n",
+    "# Hier definiere ich die Achse mit den durchschnittlichen Sitzen - es soll später eine Linie mit Markern sein\n",
     "# Weil ich auf den y-Achsen zwei verschieden grosse Werte habe, brauche ich unterschiedliche Skalen.\n",
     "ax2 = ax1.twinx()\n",
     "# Die Linie soll blau sein\n",
@@ -1087,7 +1144,6 @@
     "ax2.set_ylabel('Durchschnittliche Sitze')\n",
     "# Nun definiere ich, was es mir eigentlich anzeigen soll - und dass ich einen blauen, runden Marker will\n",
     "ax2.plot(parteistaerke_durchschnitt.index, parteistaerke_durchschnitt, color=color, marker='o')\n",
-    "\n",
     "# Hier definiere ich die Achse mit der Anzahl Vorstössen. Die Farben sollen den Parteien entsprechen\n",
     "color = [partei_farben[partei] for partei in partei_count['Partei']]\n",
     "# Ich definiere die Achsen\n",
@@ -1236,7 +1292,7 @@
    "id": "5f4238d3",
    "metadata": {},
    "source": [
-    "Fazit: Die SVP hat deutlich am meisten Sitze - reicht vergleichsweise aber nur sehr wenige Vorstösse ein.Anders als die SP und die FDP, die in Adliswil die meisten Vorstösse einreichen."
+    "Fazit des 1. Kapitels: Die SVP hat deutlich am meisten Sitze - reicht vergleichsweise aber nur sehr wenige Vorstösse ein. Anders als die SP und die FDP, die in Adliswil die meisten Vorstösse einreichen."
    ]
   },
   {
@@ -1253,97 +1309,6 @@
    "metadata": {},
    "source": [
     "Zuerst merge ich die Dataframes so zusammen, dass ich die Parteien, die Vorstoss-ID, den Status und die Geschäftsart habe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "bdbb0909",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Partei</th>\n",
-       "      <th>ID-Politiker</th>\n",
-       "      <th>Geschlecht</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Acar Sait</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>1</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Aebli Daniel</td>\n",
-       "      <td>SVP</td>\n",
-       "      <td>2</td>\n",
-       "      <td>m</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Andrea Blümli</td>\n",
-       "      <td>Die Mitte</td>\n",
-       "      <td>3</td>\n",
-       "      <td>w</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andrea Näf</td>\n",
-       "      <td>Die Mitte</td>\n",
-       "      <td>4</td>\n",
-       "      <td>w</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angelika Sulser</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>5</td>\n",
-       "      <td>w</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Name     Partei  ID-Politiker Geschlecht\n",
-       "0        Acar Sait         SP             1          m\n",
-       "1     Aebli Daniel        SVP             2          m\n",
-       "2    Andrea Blümli  Die Mitte             3          w\n",
-       "3       Andrea Näf  Die Mitte             4          w\n",
-       "4  Angelika Sulser         SP             5          w"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_parlamentarier.head(5)"
    ]
   },
   {
@@ -2006,7 +1971,7 @@
    "id": "915d4b3f",
    "metadata": {},
    "source": [
-    "Die SP bringt kaum einen Vorstoss durch, die SVP jeden. Woran liegt das? Öffenen wir den Blick auf die Lager im Parlament. Dazu bündle ich die Parteien zu drei Lager."
+    "Die SP bringt kaum einen Vorstoss durch, die SVP jeden. Woran liegt das? Öffenen wir den Blick auf die Lager im Parlament. Dazu bündle ich die Parteien zu drei Lagern."
    ]
   },
   {
@@ -2368,7 +2333,7 @@
    "id": "a3997b1a",
    "metadata": {},
    "source": [
-    "Diese Tabelle sagt eigentlich schon alles. Dennoch plotte ich es in ein Liniendiagram, das zeigt, dass die bürgerlichen Parteien in den letzten 5 Legislaturen unantastbar sind."
+    "Diese Tabelle sagt eigentlich schon alles. Dennoch plotte ich es in ein Liniendiagram, das zeigt, dass die bürgerlichen Parteien in den letzten 4 Legislaturen unantastbar sind."
    ]
   },
   {
@@ -2410,7 +2375,7 @@
    "id": "315ea188",
    "metadata": {},
    "source": [
-    "Die SVP reicht zwar von allen starken Parteien am wenigsten Vorstösse ein - bringt diese aber öfter als alle anderen Parteien durchs Parlament. Ein Grund dafür ist sicherlich, dass die bürgerlichen Parteien im gesamten Zeitraum der Auswertung die Mehrheit im Parlament hatte."
+    "Fazit Kapitel 2: Die SVP reicht zwar im Verhältnis zur Sitzzahl am wenigsten Vorstösse ein - bringt diese aber öfter als alle anderen Parteien durchs Parlament. Ein Grund dafür ist sicherlich, dass die bürgerlichen Parteien im gesamten Zeitraum der Auswertung die Mehrheit im Parlament hatte."
    ]
   },
   {
@@ -3120,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "id": "6b032b93",
    "metadata": {},
    "outputs": [
@@ -3137,15 +3102,11 @@
    ],
    "source": [
     "df_erfolg_final_sorted = df_erfolg_final.sort_values(by='Count', ascending=False).head(25)\n",
-    "# Erstelle die Plot-Achse\n",
+    "# Ich definiere die Farben, die Achse und die Beschriftungen\n",
     "farben = [partei_farben[df_namen.loc[df_namen['Name'] == name, 'Partei'].iloc[0]] for name in df_erfolg_final_sorted['Name']]\n",
     "ax = df_erfolg_final_sorted.plot(kind='bar', color=farben, x='Count', y='Erfolg kumuliert', legend=False)\n",
-    "\n",
-    "# Setze die Namen auf der x-Achse\n",
     "ax.set_xticklabels(df_erfolg_final_sorted['Name'])\n",
     "ax.set_title('So erfolgreich sind die 25 Politiker/innen mit den meisten Vorstössen')\n",
-    "\n",
-    "# Zeige die Grafik an\n",
     "plt.show()"
    ]
   },
@@ -3154,7 +3115,7 @@
    "id": "cc50cdf0",
    "metadata": {},
    "source": [
-    "Fazit: Es zeigt sich auch hier: die linken Politiker/innen haben kaum Chancen, mit ihren Vorstössen durchzukommen.Auch wenn viele von ihnen zu den Spitzenreitern an Anzahl Vorstössen gehören. Es drängt sich ein Gespräch mit der SP auf und mit den erfolgreichsten beiden Parlamentariern."
+    "Fazit Kapitel 3: Es zeigt sich auch hier: die linken Politiker/innen haben kaum Chancen, mit ihren Vorstössen durchzukommen. Auch wenn viele von ihnen zu den Spitzenreitern an Anzahl Vorstössen gehören."
    ]
   },
   {
@@ -3363,7 +3324,7 @@
    "id": "4b5532b1",
    "metadata": {},
    "source": [
-    "Nun will ich die generelle Frauenquote der einzelnen Parteien im Parlament ermitteln. Dazu gruppiere ich das Dataframe df_parlamentarier zuerst nach Partei und Geschlect und suche dann mit der lambda Methode alle \"w\" heraus und berechne den Anteil mal 100, um auf die Prozente zu kommen."
+    "Nun will ich die generelle Frauenquote der einzelnen Parteien im Parlament ermitteln. Dazu gruppiere ich das Dataframe df_parlamentarier zuerst nach Partei und Geschlecht und suche dann mit der lambda Methode alle \"w\" heraus und berechne den Anteil mal 100, um auf die Prozente zu kommen."
    ]
   },
   {
@@ -3471,7 +3432,7 @@
    "id": "b0f0ddd6",
    "metadata": {},
    "source": [
-    "Das Ganze lasse ich mir wiederum in einer Grafik anzeigen. Interessant ist, dass die SP zwar einen relativ hohen Frauenanteil im Parlament hat, an den Vorstössen aber in der Regel Männer beteiligt sind. Bei der SVP ist es umgekehrt. Das will ich ebenfalls zeigen. Ich füge also zwei Achsen in die Grafik ein."
+    "Ich will den Frauenanteil in den einzelnen Parteien nun mit der ersten Grafik verbinden. Ich füge also zwei Achsen in die Grafik ein."
    ]
   },
   {
@@ -3519,7 +3480,7 @@
    "id": "03466436",
    "metadata": {},
    "source": [
-    "Fazit: Die Frauen sind im Parlament Adliswil noch untervertreten. Einzig bei den Grünen ist der Geschlechteranteil ausgeglichen. Interessant ist hier auch, dass bei der SVP, die eher einen kleinen Frauenanteil hat, rund die Hälfte der Vorstösse von Frauen kommt. Die SP hat zwar mehr Frauen in der Partei, die Vorstösse reichen aber hauptsächlich die Männer ein."
+    "Fazit Kapitel 4: Die Frauen sind im Parlament Adliswil noch untervertreten. Einzig bei den Grünen ist der Geschlechteranteil ausgeglichen. Interessant ist hier auch, dass bei der SVP, die eher einen kleinen Frauenanteil hat, rund die Hälfte der Vorstösse von Frauen kommt. Die SP hat zwar mehr Frauen in der Partei, die Vorstösse reichen aber hauptsächlich die Männer ein."
    ]
   }
  ],
